// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for the samples service addSample works 1`] = `
Array [
  Object {
    "ExpressionAttributeValues": Object {
      ":newSampleId": Object {
        "L": Array [
          Object {
            "S": "sampleUuid",
          },
        ],
      },
    },
    "Key": Object {
      "projectUuid": Object {
        "S": "projectUuid",
      },
    },
    "TableName": "projects-test",
    "UpdateExpression": "SET projects.samples = list_append(projects.samples, :newSampleId)",
  },
]
`;

exports[`tests for the samples service addSample works 2`] = `
Array [
  Object {
    "ExpressionAttributeNames": Object {
      "#newSampleId": "sampleUuid",
    },
    "ExpressionAttributeValues": Object {
      ":newSample": Object {
        "M": Object {
          "complete": Object {
            "BOOL": false,
          },
          "createdDate": Object {
            "S": "4242-42-42T18:58:49.131Z",
          },
          "error": Object {
            "BOOL": false,
          },
          "fileNames": Object {
            "L": Array [],
          },
          "files": Object {
            "M": Object {},
          },
          "lastModified": Object {
            "S": "4242-42-42T18:58:49.131Z",
          },
          "metadata": Object {
            "M": Object {},
          },
          "name": Object {
            "S": "WT1",
          },
          "projectUuid": Object {
            "S": "projectUuid",
          },
          "species": Object {
            "NULL": true,
          },
          "type": Object {
            "S": "10X Chromium",
          },
          "uuid": Object {
            "S": "sampleUuid",
          },
        },
      },
    },
    "Key": Object {
      "experimentId": Object {
        "S": "experimentId",
      },
    },
    "TableName": "samples-test",
    "UpdateExpression": "SET samples.#newSampleId = :newSample",
  },
]
`;

exports[`tests for the samples service addSample works 3`] = `
Array [
  Object {
    "ExpressionAttributeValues": Object {
      ":newSampleId": Object {
        "L": Array [
          Object {
            "S": "sampleUuid",
          },
        ],
      },
    },
    "Key": Object {
      "experimentId": Object {
        "S": "experimentId",
      },
    },
    "TableName": "experiments-test",
    "UpdateExpression": "SET sampleIds = list_append(sampleIds, :newSampleId)",
  },
]
`;
